# converge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  generate_readme.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/: converge-architecture.md
.github/skills/agent-designer/: tool_schema_generator.py
.github/skills/interview-system-designer/: hiring_calibrator.py  loop_designer.py  question_bank_generator.py
.github/workflows/: ci.yml  release.yml
docs/: CLI.md  ROADMAP.md  architecture.md
docs/examples/: github-actions-converge.yml  pre-commit-converge.yaml
docs/plans/: 2026-03-16-core-reliability-rebuild.md
src/converge/: __init__.py  audit.py  env_manager.py  exit_codes.py  exporter.py  lockfile.py  logging_config.py  models.py  project_context.py  settings.py  version_info.py
tests/: conftest.py
tests/integration/: test_cli_features_batch2.py  test_cli_graph_guards.py  test_cli_repo_scoping.py  test_cli_status.py  test_cli_version.py  test_create_command.py  test_e2e.py  test_explain_command.py  test_export_command.py  test_fix_command.py
tests/unit/: test_ast_type_checking.py  test_cli_features_batch2.py  test_conflict_parse.py  test_dynamic_import_ast.py  test_env_manager.py  test_graph_store.py  test_import_classification.py  test_incremental.py  test_json_envelope.py  test_lockfile_uv.py  test_manifest_repairs.py  test_project_context.py  test_repair_requirements.py  test_scan_incremental_merge.py  test_scanner.py  test_settings.py  test_solver.py  test_validation_sandbox.py
(+274 files in other folders)
