[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "converge-cli"
version = "0.1.6"
description = "A Python-first repository intelligence and environment convergence platform."
readme = "README.md"
authors = [
    { name = "Converge Authors", email = "authors@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "networkx>=3.0",
    "sqlmodel>=0.0.16",
    "rich>=13.0.0",
    "uv>=0.1.0"
]

[project.scripts]
converge = "converge.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-networkx>=3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/converge"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".github",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black/formatter
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["converge"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
